# x-bot-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  setup_env.py  test_encryption.py  todo.md
services/: encryption.py  gemini_service.py  scheduler.py  x_service.py
static/: account_detail.html  app.js  edit_account.html  edit_account.js  index.html  register.html  register.js  schedule_settings.html  schedule_settings.js  style.css
