[project]
name = "x-bot-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "datetime>=6.0",
    "fastapi>=0.127.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.27",
    "tweepy>=4.14.0",
    "uvicorn>=0.40.0",
]
